<resources>
    <string name="app_name">My Social Media</string>
    <string name="action_settings">Settings</string>
    <string name="login_etUsername">Username</string>
    <string name="login_etPassword">Password</string>
    <string name="login_btnLogin">Log in</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_password_verification">Password Verification</string>
    <string name="register_display_name">Display Name</string>
    <string name="register">Register</string>
    <string name="select_image">Select Image</string>
    <string name="image_button_description">Menu</string>
    <string name="new_post">What\'s on your mind?</string>
    <string name="BaseUrl">http://10.0.2.2:5263/api/</string>
</resources>