<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:text="@string/app_name"
    tools:context="com.example.projectpart2.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94">


        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:hint="@string/login_etUsername"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:hint="@string/login_etPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_background"
            android:text="@string/login_btnLogin"
            android:textColor="#FFFFFF"
            android:textSize="18dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/newAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:textSize="18dp"
            android:background="@drawable/new_account_border"
            android:text="Create new account"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#3F51B5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="fakebook"
            android:textColor="#3131EF"
            android:textSize="45dp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
